--- a/Multiplier/Base.lproj/Main.storyboard
+++ b/Multiplier/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Multiplier" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,90 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chalkboard" translatesAutoresizingMaskIntoConstraints="NO" id="Luu-b4-7gJ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="MULTIPLES" translatesAutoresizingMaskIntoConstraints="NO" id="XBp-FS-a4P">
+                                <rect key="frame" x="20" y="28" width="552" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="390" id="3tI-nS-roS"/>
+                                    <constraint firstAttribute="height" constant="128" id="aaY-Fn-Pet"/>
+                                </constraints>
+                            </imageView>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rjh-iD-H3d">
+                                <rect key="frame" x="191" y="415" width="211" height="101"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="101" id="20d-Dv-4aN"/>
+                                    <constraint firstAttribute="width" constant="211" id="s54-Q3-0lF"/>
+                                </constraints>
+                                <state key="normal" image="add"/>
+                                <connections>
+                                    <action selector="hitAddBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bHN-Ka-NVf"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What will you multiply?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GNR-VZ-uIr">
+                                <rect key="frame" x="164" y="294" width="272" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="G1s-7d-mBE"/>
+                                    <constraint firstAttribute="width" constant="272" id="NNF-z9-IOj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Get ready to add numbers?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5SE-cT-8GN">
+                                <rect key="frame" x="108" y="174" width="389" height="48"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="29"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Id-tF-Znk">
+                                <rect key="frame" x="164" y="332" width="272" height="268"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="6Id-tF-Znk" secondAttribute="height" multiplier="68:67" id="Gfn-iI-736"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
+                                <state key="normal" image="play"/>
+                                <connections>
+                                    <action selector="hitPlayBtn" destination="BYZ-38-t0r" eventType="touchUpInside" id="TbV-Lh-XSz"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5SE-cT-8GN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7gw-K7-RJs"/>
+                            <constraint firstItem="6Id-tF-Znk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AkY-WJ-HUP"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6Id-tF-Znk" secondAttribute="bottom" id="BZw-vf-Vna"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Rjh-iD-H3d" secondAttribute="bottom" constant="84" id="Kye-Qy-x4p"/>
+                            <constraint firstAttribute="trailing" secondItem="Luu-b4-7gJ" secondAttribute="trailing" id="LWl-eW-B8K"/>
+                            <constraint firstItem="Rjh-iD-H3d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bWt-Tw-uxl"/>
+                            <constraint firstItem="Luu-b4-7gJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="diY-fX-6tH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Luu-b4-7gJ" secondAttribute="bottom" id="hzR-jz-7qH"/>
+                            <constraint firstItem="GNR-VZ-uIr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nCo-KN-vEG"/>
+                            <constraint firstItem="5SE-cT-8GN" firstAttribute="top" secondItem="XBp-FS-a4P" secondAttribute="bottom" constant="18" id="pJP-ha-6Ie"/>
+                            <constraint firstItem="XBp-FS-a4P" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ptK-7v-70H"/>
+                            <constraint firstItem="XBp-FS-a4P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="sK9-ie-R7d"/>
+                            <constraint firstItem="6Id-tF-Znk" firstAttribute="top" secondItem="GNR-VZ-uIr" secondAttribute="bottom" constant="8" id="x1z-X5-QdC"/>
+                            <constraint firstItem="Luu-b4-7gJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yAh-Sg-kFS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addBtn" destination="Rjh-iD-H3d" id="szQ-0l-hhg"/>
+                        <outlet property="addLbl" destination="5SE-cT-8GN" id="7Zd-ZG-1c1"/>
+                        <outlet property="mainLogo" destination="XBp-FS-a4P" id="s5H-7I-HyA"/>
+                        <outlet property="multiplierText" destination="GNR-VZ-uIr" id="ugm-GX-Muq"/>
+                        <outlet property="playBtn" destination="6Id-tF-Znk" id="SVQ-X7-6c2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-39" y="460"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MULTIPLES" width="533" height="124"/>
+        <image name="add" width="211" height="101"/>
+        <image name="chalkboard" width="801" height="750"/>
+        <image name="play" width="272" height="268"/>
+    </resources>
 </document>
